--- a/java-amazon/pom.xml
+++ b/java-amazon/pom.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (C) 2011 - 2014 GraphWalker Permission is hereby granted, 
-	free of charge, to any person obtaining a copy of this software and associated 
-	documentation files (the "Software"), to deal in the Software without restriction, 
-	including without limitation the rights to use, copy, modify, merge, publish, 
-	distribute, sublicense, and/or sell copies of the Software, and to permit 
-	persons to whom the Software is furnished to do so, subject to the following 
-	conditions: The above copyright notice and this permission notice shall be 
-	included in all copies or substantial portions of the Software. THE SOFTWARE 
-	IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING 
-	BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR 
-	PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS 
-	BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION 
-	OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH 
-	THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. -->
-
+<!-- #%L graphwalker-example-archetype %% Copyright (C) 2011 - 2014 GraphWalker 
+	%% Permission is hereby granted, free of charge, to any person obtaining 
+	a copy of this software and associated documentation files (the "Software"), 
+	to deal in the Software without restriction, including without limitation 
+	the rights to use, copy, modify, merge, publish, distribute, sublicense, 
+	and/or sell copies of the Software, and to permit persons to whom the Software 
+	is furnished to do so, subject to the following conditions: The above copyright 
+	notice and this permission notice shall be included in all copies or substantial 
+	portions of the Software. THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY 
+	OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES 
+	OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. 
+	IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, 
+	DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, 
+	ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER 
+	DEALINGS IN THE SOFTWARE. #L% -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
@@ -21,8 +21,8 @@
 
 	<groupId>com.company</groupId>
 	<version>4.0-SNAPSHOT</version>
-	<artifactId>Distributor</artifactId>
-	<name>Distributor</name>
+	<artifactId>java-amazon</artifactId>
+	<name>GraphWalker Amazon Example for GW4E</name>
 
 	<properties>
 		<graphwalker.version>4.0.0-SNAPSHOT</graphwalker.version>
@@ -33,16 +33,33 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>23.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.graphwalker</groupId>
 			<artifactId>graphwalker-cli</artifactId>
 			<version>${graphwalker.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
-			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.6.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>1.7.2</version>
 		</dependency>
 	</dependencies>
 
@@ -65,9 +82,9 @@
 				<executions>
 					<execution>
 						<id>generate-test-sources</id>
-						<phase>generate-test-sources</phase>
+						<phase>generate-sources</phase>
 						<goals>
-							<goal>generate-test-sources</goal>
+							<goal>generate-sources</goal>
 						</goals>
 					</execution>
 					<execution>
