update sample with offline

--- a/java-amazon/.settings/gw4e-eclipse-plugin.prefs
+++ b/java-amazon/.settings/gw4e-eclipse-plugin.prefs
@@ -1,5 +1,10 @@
 PROJECT_SCOPED.GW4E.BUILD_POLICIES_FILENAME=build.policies%
+PROJECT_SCOPED.GW4E.BUILD_POLICIES_SYNCHRONIZATION_AUTHORIZED=true%
 PROJECT_SCOPED.GW4E.GW4E_ENABLE_BUILD=true%
 PROJECT_SCOPED.GW4E.GW4E_ENABLE_PERFORMANCE=false%
+PROJECT_SCOPED.GW4E.GW4E_MAIN_SOURCE_GENERATED_INTERFACE=target/generated-sources%
+PROJECT_SCOPED.GW4E.GW4E_TEST_SOURCE_GENERATED_INTERFACE=target/generated-test-sources%
 PROJECT_SCOPED.GW4E.LOG_INFO_ENABLED=false%
+PROJECT_SCOPED.GW4E.SUFFIX_PREFERENCE_FOR_TEST_OFFLINE_IMPLEMENTATION=OffLineImpl%
+PROJECT_SCOPED.GW4E.TIMEOUT_FOR_TEST_OFFLINE_GENERATION=15%
 eclipse.preferences.version=1
