Corrected Amazon example analog to the GW example to fit new website

--- a/java-amazon/.settings/gw4e-eclipse-plugin.prefs
+++ b/java-amazon/.settings/gw4e-eclipse-plugin.prefs
@@ -6,5 +6,6 @@ PROJECT_SCOPED.GW4E.GW4E_MAIN_SOURCE_GENERATED_INTERFACE=target/generated-source
 PROJECT_SCOPED.GW4E.GW4E_TEST_SOURCE_GENERATED_INTERFACE=target/generated-test-sources%
 PROJECT_SCOPED.GW4E.LOG_INFO_ENABLED=false%
 PROJECT_SCOPED.GW4E.SUFFIX_PREFERENCE_FOR_TEST_OFFLINE_IMPLEMENTATION=OffLineImpl%
+PROJECT_SCOPED.GW4E.TIMEOUT_FOR_GRAPHWALKER_TEST_EXECUTION=180%
 PROJECT_SCOPED.GW4E.TIMEOUT_FOR_TEST_OFFLINE_GENERATION=15%
 eclipse.preferences.version=1
